# Glinerme

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  settings.py
app/routers/: extract.py  health.py  schemas.py
app/schemas/: __init__.py  api.py  yaml_schema.py
app/services/: __init__.py  extractor.py  model.py  schema_registry.py  schema_validation.py  triplet_mapper.py
config/schemas/: default.yaml  knowledge_graph.yaml
tests/: test_api.py  test_schema_registry.py  test_schema_upload.py  test_schema_validation.py  test_triplet_mapper.py
